--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "0.1.0-11",
+    "antd": "^3.6.5",
     "autoprefixer": "7.1.6",
     "axios": "^0.18.0",
     "babel-core": "6.26.0",
@@ -102,6 +103,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.8.0",
     "enzyme": "^3.3.0"
   }
 }
