--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   directories:
   - node_modules
 script:
-  - cd test-app
+  - cd react-redux-movie-db-app
   - npm install
   - npm test
   - npm run build
