--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.8.0",
-    "enzyme": "^3.3.0"
+    "enzyme": "^3.3.0",
+    "watchman": "^1.0.0"
   }
 }
