--- a/package.json
+++ b/package.json
@@ -105,6 +105,6 @@
   "devDependencies": {
     "babel-plugin-import": "^1.8.0",
     "enzyme": "^3.3.0",
-    "watchman": "^1.0.0"
+    "enzyme-adapter-react-16": "^1.1.1"
   }
 }
