--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
   "devDependencies": {
     "babel-plugin-import": "^1.8.0",
     "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1"
+    "enzyme-adapter-react-16": "^1.1.1",
+    "sinon": "^6.1.3"
   }
 }
